--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 	<h2>統計四 106304011 何季蓉</h2>
 	<p>
 		<a href="https://www.google.com/">
-			<img src="main (1).png"
+			<img src="main.png"
 			width = "100" height = "100" alt = "google.com">
 		</a>
 
