--- a/hello.html
+++ b/hello.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style type="text/css">
+		b {
+			background: #ddd
+		}
+		.link {
+			text-align: center;
+			background: #778;
+			font-size: 200%;
+			color: #332;
+		}
+		.medjed {
+			background-color: #333;
+		}
+		@media (max-height: 100px){
+			.column, .medjed {
+				flex-direction: row;
+			}
+		}
+	</style>
+	<link rel="stylesheet" type="text/css" href="hello.css">
 	<title>Welcome</title>
 </head>
 <body>
-	<h1>Hello world</h1>
+	<h1>Hello world!!!</h1>
 	<h2>統計四 106304011 何季蓉</h2>
-	<p>
+	<p class="medjed" style="width: 50%; height: 50%"; text-align: center>
 		<a href="https://www.google.com/">
 			<img src="main.png"
 			width = "100" height = "100" alt = "google.com">
 		</a>
-
+		<a href="https://www.google.com/">
+			<img src="main.png"
+			width = "100" height = "100" alt = "google.com">
+		</a>
+		<a href="https://www.google.com/">
+			<img src="main.png"
+			width = "100" height = "100" alt = "google.com">
+		</a>
 	</p>
-	<a href="index.html">
-	go to link
-	</a>
+	<div class="link">
+		<a href="index.html">
+			---go to link---
+		</a>
+	</div>
+
 	<p>aaa</p>
 	<div>3333</div>
 	<i>1111</i>
